--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,20 @@
   .animation-delay-4000 {
     animation-delay: 4s;
   }
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #E5E7EB;
+  border-radius: 20px;
 }
 
 @keyframes blob {
